# gen2

./: Dockerfile  QUICK-START.md  README.md  package.json  start.bat  test-client.js
server-code/: README-SIMPLE.md  advanced-simple-server.js  deploy.sh  docker-compose.yml  env.example  render.yaml  start.sh
server-code/src/api/: app.js
server-code/src/api/config/: server.js
server-code/src/api/models/: User.js
server-code/src/api/services/: cryptoService.js  userService.js
server-code/src/client/: messaging-app.js
server-code/src/crypto/: key-exchange.js
server-code/src/rust/: lib.rs  main.rs
server-code/src/rust/src/: main.rs
src/api/: hybrid_bridge.js
src/api/config/: database.js
src/api/controllers/: messageController.js
src/api/models/: Message.js
src/api/routes/: messageRoutes.js
src/api/services/: messageService.js
src/models/: User.js
src/rust/: Cargo.toml  crypto.rs  error.rs  message.rs  utils.rs
src/services/: userService.js
