[package]
name = "crypto_api"
version = "0.1.0"
edition = "2021"

[dependencies]
ring = "0.17"
rsa = "0.9"
aes-gcm = "0.10"
sha2 = "0.10"
pbkdf2 = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
base64 = "0.21"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.0", features = ["derive"] }
rand = "0.8"
